New-Upload-1755854042013/objects/Permission_Set_Admin__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <label>User License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Permission Set Admin</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Permission Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Set Admins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>